k8s_manifests/news-bias-evaluator-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-bias-evaluator-app
spec:
  # let's us define which pods (based on pod labels) should be affected by this deployment.
  # type command: " kubectl explain deployment.spec.selector | more " for more info
  selector:
    matchLabels:
      app: news-bias-evaluator-app
  replicas: 2
  template:
    metadata:
      labels:
        app: news-bias-evaluator-app
    spec:
      # registry credentials were deployed manually to the cluster.
      # Keys contain base 64 encoding for security reasoons.
      # The following two lines tell the deployment file to use these credentials
      # to pull the docker image from the private registry
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: news-bias-evaluator-app
          image: registry.git.chalmers.se/courses/dit825/2022/group07/group-07:latest
          ports:
            - containerPort: 8080

---
# Make the deployment accessible from within the cluster
apiVersion: v1
kind: Service
metadata:
  name: news-bias-evaluator-app
spec:
  selector:
    app: news-bias-evaluator-app

  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
