k8s_manifests/basic-ingress.yaml
# The purpose of this resource is to allow for
# the routing of external HTTP traffic to internal
# services. This config will also allow for the use
# of GKE's default load balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  defaultBackend:
    service:
      name: news-bias-evaluator-app
      port:
        number: 8080
